--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/knowledge-express/skipgram.git"
+  },
+  "engines": {
+    "node": "7.8.0",
+    "npm": "4.2.0"
   }
 }
